// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render actions.onClick - value[0] 1`] = `
<div
  className="{\\"style\\":[{\\"outline\\":\\"none\\",\\"cursor\\":\\"pointer\\"},null]}"
  data-testid="actions.onClick"
  id="actions.onClick"
  onClick={[Function]}
>
  <h3>
    Click Me
  </h3>
  <div
    style={
      Object {
        "border": "1px solid red",
        "padding": 10,
      }
    }
  >
    content
  </div>
</div>
`;

exports[`Render areas.content - value[0] 1`] = `
<div
  className="{\\"style\\":[{\\"outline\\":\\"none\\"},null]}"
  data-testid="areas.content"
  id="areas.content"
  onClick={[Function]}
>
  <div
    style={
      Object {
        "border": "1px solid red",
        "padding": 10,
      }
    }
  >
    content
  </div>
</div>
`;

exports[`Render blocks - value[0] 1`] = `
<div
  className="{\\"style\\":[{\\"outline\\":\\"none\\"},null]}"
  data-testid="blocks"
  id="blocks"
  onClick={[Function]}
>
  <div
    style={
      Object {
        "border": "1px solid red",
        "padding": 10,
      }
    }
  >
    content
  </div>
</div>
`;

exports[`Render default - value[0] 1`] = `
<div
  className="{\\"style\\":[{\\"outline\\":\\"none\\"},null]}"
  data-testid="default"
  id="default"
  onClick={[Function]}
>
  <div
    style={
      Object {
        "border": "1px solid red",
        "padding": 10,
      }
    }
  >
    content
  </div>
</div>
`;

exports[`Render properties.content - value[0] 1`] = `
<div
  className="{\\"style\\":[{\\"outline\\":\\"none\\"},null]}"
  data-testid="properties.content"
  id="properties.content"
  onClick={[Function]}
>
  Foo Content
</div>
`;

exports[`Render property.style - value[0] 1`] = `
<div
  className="{\\"style\\":[{\\"outline\\":\\"none\\"},{\\"color\\":\\"red\\"}]}"
  data-testid="property.style"
  id="property.style"
  onClick={[Function]}
>
  <h3>
    Red Title
  </h3>
  <div
    style={
      Object {
        "border": "1px solid red",
        "padding": 10,
      }
    }
  >
    content
  </div>
</div>
`;

exports[`Render property.title - value[0] 1`] = `
<div
  className="{\\"style\\":[{\\"outline\\":\\"none\\"},null]}"
  data-testid="property.title"
  id="property.title"
  onClick={[Function]}
>
  <h3>
    Foo Title
  </h3>
  <div
    style={
      Object {
        "border": "1px solid red",
        "padding": 10,
      }
    }
  >
    content
  </div>
</div>
`;

exports[`Test Schema actions.onClick 1`] = `true`;

exports[`Test Schema actions.onClick 2`] = `null`;

exports[`Test Schema areas.content 1`] = `true`;

exports[`Test Schema areas.content 2`] = `null`;

exports[`Test Schema blocks 1`] = `true`;

exports[`Test Schema blocks 2`] = `null`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.content 1`] = `true`;

exports[`Test Schema properties.content 2`] = `null`;

exports[`Test Schema property.style 1`] = `true`;

exports[`Test Schema property.style 2`] = `null`;

exports[`Test Schema property.title 1`] = `true`;

exports[`Test Schema property.title 2`] = `null`;
